[tool.poetry]
name = "trimit"
version = "0.1.0"
description = ""
authors = ["bcarvalho, <codingbruno@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
streamlit = "^1.31.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
